@@ -50,45 +50,45 @@ public class Vargs {
 		v = new Vector(initialSize);
 	}
 
-	public Vargs add(boolean value) {
-		v.add(new Boolean(value));
-		return this;
-	}
+        public Vargs add(boolean value) {
+                v.add(Boolean.valueOf(value));
+                return this;
+        }
 
-	public Vargs add(byte value) {
-		v.add(new Byte(value));
-		return this;
-	}
+        public Vargs add(byte value) {
+                v.add(Byte.valueOf(value));
+                return this;
+        }
 
-	public Vargs add(char value) {
-		v.add(new Character(value));
-		return this;
-	}
+        public Vargs add(char value) {
+                v.add(Character.valueOf(value));
+                return this;
+        }
 
-	public Vargs add(short value) {
-		v.add(new Short(value));
-		return this;
-	}
+        public Vargs add(short value) {
+                v.add(Short.valueOf(value));
+                return this;
+        }
 
-	public Vargs add(int value) {
-		v.add(new Integer(value));
-		return this;
-	}
+        public Vargs add(int value) {
+                v.add(Integer.valueOf(value));
+                return this;
+        }
 
-	public Vargs add(long value) {
-		v.add(new Long(value));
-		return this;
-	}
+        public Vargs add(long value) {
+                v.add(Long.valueOf(value));
+                return this;
+        }
 
-	public Vargs add(float value) {
-		v.add(new Float(value));
-		return this;
-	}
+        public Vargs add(float value) {
+                v.add(Float.valueOf(value));
+                return this;
+        }
 
-	public Vargs add(double value) {
-		v.add(new Double(value));
-		return this;
-	}
+        public Vargs add(double value) {
+                v.add(Double.valueOf(value));
+                return this;
+        }
 
 	public Vargs add(String value) {
 		v.add(value);
